NIFI-14861: Added support for complex field types